<resources>
    <string name="app_name">AndroidRestWebServiceIntegration</string>
    <string name="string_login">Login</string>
    <string name="string_username">User Name</string>
    <string name="string_emailId">Email Id</string>
    <string name="string_password">Password</string>
    <string name="string_register">Register</string>
    <string name="string_cancel">Cancel</string>
    <string name="regisrtation_successful">Registration Successful</string>
</resources>
